--- a/Menu.html
+++ b/Menu.html
@@ -1,9 +1,11 @@
                           CONTROLE DE VENDA DE PIZZAS
 Pizzaria: Pizza Alegre 
-Versão: 002
+Versão: 003
 Operador:
 
 Telefone:
 Cliente:
 CPF:
 E-mail:
+
+Aceita participar de promoções? () Sim () Não
